Added vendor Authorization based on email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,18 +21,33 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
             <li class="nav-item">
               <%= link_to "Home", zords_path, class: "nav-link" %>
             </li>
-            <li class="nav-item">
-              <%= link_to "Customize", zords_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Orders", zords_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Cart", zords_path, class: "nav-link" %>
-            </li>
+            <% if user_signed_in? %>
+              <% if current_user.email.include?("@zordforge") %>
+                <li class="nav-item">
+                  <%= link_to "Requests", zords_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Add Limited Edition Zord", zords_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Manage Inventory", zords_path, class: "nav-link" %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "Customize", zords_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Orders", zords_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Cart", zords_path, class: "nav-link" %>
+                </li>
+              <% end %>
+            <% end %>
           </ul>
           <ul class="navbar-nav">
             <% if user_signed_in? %>
