--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
               <%= link_to "Home", zords_path, class: "nav-link" %>
             </li>
             <% if user_signed_in? %>
-              <% if current_user.email.include?("@zordforge") %>
+              <% if current_user.vendor?%>
                 <li class="nav-item">
                   <%= link_to "Requests", zords_path, class: "nav-link" %>
                 </li>
