--- a/app/views/zords/index.html.erb
+++ b/app/views/zords/index.html.erb
@@ -14,8 +14,10 @@
         <p class="card-text">Price: <%= number_to_currency(zord.price) %></p>
         <p class="card-text"><%= zord.description %></p>
         <div class="mt-3">
-          <%= link_to "View Details", zords_path, class: "btn btn-primary me-2" %>
-          <%= link_to "Add to Cart", zords_path, class: "btn btn-success" %>
+          <%= link_to "View Details", zord_path(zord), class: "btn btn-primary me-2" %>
+          <% if current_user && !current_user.vendor? %>
+            <%= link_to "Add to Cart", zords_path, class: "btn btn-success" %>
+          <% end %>
         </div>
       </div>
     </div>
