Commiting changes for Customize Zord

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,3 +3,7 @@
 <p>
   Find me in app/views/home/show.html.erb
 </p>
+
+<p>
+  <%= link_to 'Customize zords!', request_customize_zord_path, class: 'btn btn-primary' %>
+</p>
