--- a/app/views/zords/show.html.erb
+++ b/app/views/zords/show.html.erb
@@ -28,7 +28,7 @@
 
 <% if current_user && current_user.vendor? %>
     <div class="mt-1">
-        <%= link_to 'Edit', zords_path, class: "btn btn-success" %> 
+        <%= link_to 'Edit', edit_zord_path, class: "btn btn-success" %> 
     </div>
 <% end %>
 
