--- a/app/views/zords/edit.html.erb
+++ b/app/views/zords/edit.html.erb
@@ -9,7 +9,14 @@
   <%= f.number_field :capacity, label: "Capacity" %>
   <%= f.number_field :quantity, label: "Quantity" %>
   <%= f.text_field :theme, label: "Theme" %>
-  <%= f.file_field :figure_image, label: "Figure Image" %>
+  <div class="field">
+    <% if @zord.figure_image.attached? %>
+      <div class="existing-image">
+        <%= image_tag @zord.figure_image, class: "img-fluid rounded", style: "max-width: 200px; max-height: 200px; object-fit: cover;" %>
+      </div>
+    <% end %>
+    <%= f.file_field :figure_image, class: "form-control" %>
+  </div>
 
   <%= f.submit %>
   <%= link_to "Cancel", zords_path, class: "btn btn-primary" %>
