--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
                   <%= link_to "Orders", zords_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "Cart", zords_path, class: "nav-link" %>
+                  <%= link_to "Cart", cart_path, class: "nav-link" %>
                 </li>
               <% end %>
             <% end %>
