--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -13,5 +13,9 @@
 </p>
 
 <p>
+  Capacity: <%= @request.capacity%>
+</p>
+
+<p>
     <%= link_to "Home", requests_all_requests_path, class: 'btn btn-primary'%>
 </p>
