--- a/app/views/zords/index.html.erb
+++ b/app/views/zords/index.html.erb
@@ -1,38 +1,72 @@
 <div class="container-fluid">
   <div class="row" >
+    <!-- This div is for filters -->
+    <div class="col-md-2 " style="height: 100vh; overflow-y: auto; ">
 
-    <div class="col-md-2 " style="height: 100vh; overflow-y: auto;">
-      <div>
-        <p>Filters<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter-circle-fill" viewBox="0 0 16 16">
-          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M3.5 5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1 0-1M5 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m2 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5"/>
-        </svg></p>
-      </div>
 
-      <div class="d-flex justify-content-start" style="margin-top: 20px;">
-        <div class="btn btn-primary">
-          <%= sort_link(@q, :price, "Price") %>
+      <div  style="border: 1px ; padding: 10px; background-color: rgba(255, 255, 255, 0.1);">
+        <div>
+          <p>Filters<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter-circle-fill" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M3.5 5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1 0-1M5 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m2 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5"/>
+          </svg></p>
         </div>
-      </div>
-      <div class="d-flex justify-content-start" style="margin-top: 20px;">
-        <div class="btn btn-primary">
-          <%= sort_link(@q, :capacity, "Capacity") %>
+
+
+        <!-- This div is for sorting  -->
+        <div class="d-flex justify-content-start" style="margin-top: 20px;">
+          <div class="btn btn-primary">
+            <%= sort_link(@q, :price, "Price") %>
+          </div>
         </div>
-      </div>
+        <div class="d-flex justify-content-start" style="margin-top: 20px;">
+          <div class="btn btn-primary">
+            <%= sort_link(@q, :capacity, "Capacity") %>
+          </div>
+        </div>
+
+
+        <!--These are for Filtering -->
+
+        <div class = "mt-3">
+          <%= search_form_for @q do |f| %>
+            <div class="form-group">
+              <%= f.label :material_eq, "Material" %>
+              <%= f.select :material_eq, options_for_select(Zord.available_materials.map { |m| [m, m] }, @q.material_eq), { include_blank: true }, class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :theme_eq, "Theme" %>
+              <%= f.select :theme_eq, options_for_select(Zord.available_themes.map { |m| [m, m] }, @q.theme_eq), { include_blank: true }, class: "form-control" %>
+            </div>
+            <div class="row mt-3">
+              <div class="col-md-6">
+                <%= f.submit "Filter", class: "btn btn-success" %>
+              </div>
+              <div class="col-md-6">
+                <%= link_to "Clear Filters", zords_path, class: "btn btn-danger" %>
+              </div>
+            </div>
+
+
+          <% end %>
+        </div>  
+      </div>  
     </div>
     
-    <div class="col-md-10" >
-      <%= search_form_for @q do |f| %>
-        <div class="row mb-4" >
-          <div class="col-md-11">
-            <%= f.label :name_or_material_or_theme_or_ability_cont, "Search by Name, Material, Theme, Ability" %>
-            <%= f.search_field :name_or_material_or_theme_or_ability_cont, class: "form-control" %>
+    <div class="col-md-10"  >
+      <div style="border: 1px ; padding:3px;padding-right:20px; background-color: rgba(255, 255, 255, 0.05);">
+        <%= search_form_for @q do |f| %>
+          <div class="row mb-4" >
+            <div class="col-md-11">
+              <%= f.label :name_or_material_or_theme_or_ability_cont, "Search by Name, Material, Theme, Ability" %>
+              <%= f.search_field :name_or_material_or_theme_or_ability_cont, class: "form-control" %>
+            </div>
+            <div class="col-md-1 mt-4">
+              <%= f.submit "Search", class: "btn btn-primary" %>
+            </div>
           </div>
-          <div class="col-md-1 mt-4">
-            <%= f.submit "Search", class: "btn btn-primary" %>
-          </div>
-        </div>
-      <% end %>
-
+        <% end %>
+      </div>
       <div class="row mb-4 " style="max-height: calc(100vh - 80px); overflow-y: auto; margin: 20px ">
         <% if current_user && current_user.vendor? %>
           <div class="col-md-12 text-end mb-3">
