--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,11 @@
 
             <li class="nav-item">
               <%= link_to "Home", zords_path, class: "nav-link" %>
-            <li class="nav-item">
-              <%= link_to "Customize", request_customize_zord_path , class: "nav-link"%>
             </li>
             <% if user_signed_in? %>
               <% if current_user.vendor?%>
                 <li class="nav-item">
-                  <%= link_to "Requests", zords_path, class: "nav-link" %>
+                  <%= link_to "Requests", request_customize_zord_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "Add Limited Edition Zord", zords_path, class: "nav-link" %>
@@ -39,6 +37,9 @@
                   <%= link_to "Manage Inventory", zords_path, class: "nav-link" %>
                 </li>
               <% else %>
+                <li class="nav-item">
+                  <%= link_to "Requests", requests_all_requests_path, class: "nav-link" %>
+                </li>
                 <li class="nav-item">
                   <%= link_to "Orders", zords_path, class: "nav-link" %>
                 </li>
