--- a/app/views/requests/all_requests.html.erb
+++ b/app/views/requests/all_requests.html.erb
@@ -22,6 +22,8 @@
         <td><%= request.ability %></td>
         <td><%= request.capacity %></td>
         <td><%= link_to "Show", request_path(request) %></td>
+        <td><%= link_to "Edit", edit_request_path(request) %></td>
+        <td><%= button_to "Delete", request_path(request), method: :delete, data: { turbo: false }, class: "btn btn-sm btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
