--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -37,7 +37,7 @@
     <h3>Total Price: <%= number_to_currency(total_price) %></h3>
   </div>
   <div class="col-md-3 text-center">
-    <%= button_to "Proceed to Checkout>>", cart_path, method: :post, class: "btn btn-success" %>
+    <%= link_to "Proceed to Checkout>>", add_address_path, class: "btn btn-success" %>
   </div>
 </div>
 <%else%>
