--- a/app/views/zords/index.html.erb
+++ b/app/views/zords/index.html.erb
@@ -82,6 +82,9 @@
           <div class="col-md-9 mb-1 mt-1">
             <div class="card-body">
               <h5 class="card-title"><%= zord.name %></h5>
+              <% if zord.limited? %>
+                <p class="card-text mb-1"><strong>Limited:</strong>Yes </p>
+              <% end  %>
               <p class="card-text mb-1">Price: <%= number_to_currency(zord.price) %></p>
               <p class="card-text mb-1"><strong>Material:</strong><%= zord.material %></p>
               <p class="card-text mb-1"><strong>Theme:</strong><%= zord.theme %></p>
@@ -96,8 +99,7 @@
 
                 <% if current_user && current_user.vendor? %>
                   <%= link_to "Edit Zord", edit_zord_path(zord), class: "btn btn-primary" %>
-                <% end %>
-                <% if current_user && current_user.vendor? %>
+                
                   <div class="mt-3">
                     <%= button_to "Delete", zord_path(zord), method: :delete, data: { confirm: "Are you sure you want to delete this zord?" }, class: "btn btn-danger" %>
                   </div>
