--- a/app/views/bids/index_bids.html.erb
+++ b/app/views/bids/index_bids.html.erb
@@ -1,9 +1,9 @@
-<h1>All Bids</h1>
- <p>
-  <%= link_to "Add Limited edition Zord", new_limited_path, class: 'btn btn-primary' %>
+<h1>Bids</h1>
+<% if current_user && current_user.vendor%>
+  <p>
+    <%= link_to "Add Limited edition Zord", new_limited_path, class: 'btn btn-primary' %>
   </p>
-<table class="table table-hover">
- 
+  <table class="table table-hover">
   <thead class="table-dark">
     <tr>
       <th>Zord Name</th>
@@ -23,17 +23,74 @@
         <td><%= bid.start_date %></td>
         <td><%= bid.end_date %></td>
         <td><%= number_to_currency(bid.base_price)%></td>
+        <td><%= link_to "Show", show_zord_bid_path(bid) %></td>
+        <td><%= button_to "Delete", bid_path(bid), method: :delete, data: { turbo: false }, class: "btn btn-sm btn-danger" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+ </table>
+<%else%>
+
+<h4>Bids registered</h4>
+<table class="table table-hover">
+  <thead class="table-dark">
+    <tr>
+      <th>Zord Name</th>
+      <th>Start date</th>
+      <th>End date</th>
+      <th>Base price</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead> 
+  <tbody>
+    <% @bids_registered.each do |bid| %>
+      <tr>
+        <td><%= bid.zord.name %></td>
+        <td><%= bid.start_date %></td>
+        <td><%= bid.end_date %></td>
+        <td><%= number_to_currency(bid.base_price)%></td>
+        <td><%= button_to "Add or update Bid", add_to_cart_path(bid.zord), method: :post, class: "btn btn-success" %></td>
+        <td><%= button_to "Deregister", destroy_registration_path(bid), method: :delete, data: { turbo: false }, class: "btn btn-info" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br>
+<br>
+<h4>Bids Not registered</h4>
+<table class="table table-hover">
+  <thead class="table-dark">
+    <tr>
+      <th>Zord Name</th>
+      <th>Start date</th>
+      <th>End date</th>
+      <th>Base price</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+ 
+  <tbody>
+    <% @bids_not_registered.each do |bid| %>
+      <tr>
+        <td><%= bid.zord.name %></td>
+        <td><%= bid.start_date %></td>
+        <td><%= bid.end_date %></td>
+        <td><%= number_to_currency(bid.base_price)%></td>
         <%if current_user && current_user.vendor?%>
-            <td><%= link_to "Show", zord_path(bid.zord) %></td>
+            <td><%= link_to "Show", show_zord_bid(bid) %></td>
             <td><%= button_to "Delete", bid_path(bid), method: :delete, data: { turbo: false }, class: "btn btn-sm btn-danger" %></td>
         <%else%>
-            <td><%= button_to "Add or update Bid", add_to_cart_path(bid.zord), method: :post, class: "btn btn-success" %></td>
+            <td><%= link_to "Register for Bid", show_zord_bid_path(bid), class: "btn btn-primary" %></td>
         <%end%>
       </tr>
     <% end %>
   </tbody>
  </table>
  
-
+<%end%>
 
 
