--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -17,5 +17,9 @@
 </p>
 
 <p>
+  Status: <%= @request.status%>
+</p>
+
+<p>
     <%= link_to "Home", requests_all_requests_path, class: 'btn btn-primary'%>
 </p>
