--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <% if user_signed_in? %>
               <% if current_user.vendor?%>
                 <li class="nav-item">
-                  <%= link_to "Requests", request_customize_zord_path, class: "nav-link" %>
+                  <%= link_to "Requests", requests_vendor_requests_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "Add Limited Edition Zord", zords_path, class: "nav-link" %>
@@ -45,6 +45,9 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to "Cart", cart_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Notifications", all_notifications_path, class: "nav-link" %>
                 </li>
               <% end %>
             <% end %>
