--- a/app/views/requests/approval.html.erb
+++ b/app/views/requests/approval.html.erb
@@ -26,5 +26,6 @@
     <%= f.text_field :name, label: "Name" %>
     <%= f.text_field :description, label: "Description" %>
     <%=f.text_field :message, label: "Message" %>
+     <%= f.file_field :figure_image, label: "Figure Image" %>
     <%= f.submit %>
 <% end %>
