--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                   <%= link_to "Bids", all_bids_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "Orders", zords_path, class: "nav-link" %>
+                  <%= link_to "Orders", orders_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "Cart", cart_path, class: "nav-link" %>
