Done the required changes for pay for customized item

--- a/app/views/orders/payment.html.erb
+++ b/app/views/orders/payment.html.erb
@@ -20,17 +20,17 @@
     
 
   <div class="mb-3">
-    <%= f.text_field :card_number, class: "form-control", required: true, pattern: "[0-9]*"  %>
+    <%= f.number_field :card_number, class: "form-control", required: true, pattern: "[0-9]*"  %>
     <div class="invalid-feedback">Please enter your card number.</div>
   </div>
 
   <div class="mb-3">
-    <%= f.text_field :expiry_date, class: "form-control", required: true, pattern: "[0-9]*" %>
+    <%= f.number_field :expiry_date, class: "form-control", required: true, pattern: "[0-9]*" %>
     <div class="invalid-feedback">Please enter your expiry date.</div>
   </div>
 
   <div class="mb-3">
-    <%= f.text_field :security_code, class: "form-control", required: true, pattern: "[0-9]*"  %>
+    <%= f.number_field :security_code, class: "form-control", required: true, pattern: "[0-9]*"  %>
     <div class="invalid-feedback">Please enter your security code.</div>
   </div>
   <!-- Other form fields -->
