--- a/app/views/notifications/show_notification.html.erb
+++ b/app/views/notifications/show_notification.html.erb
@@ -3,6 +3,11 @@
 <p>
   Message: <%= @notification.message %>
 </p>
+
+<p>
+  Status: <%= @notification.status %>
+</p>
+
  <p>
-    <%= button_to "Pay for Customized Item", add_to_cart_path(@notification.zord), method: :post, class: "btn btn-success" %>
+    <%= button_to "Pay for Customized Item", add_to_cart_path(zord_id: @notification.zord.id, notification_id: @notification.id), method: :post, class: "btn btn-success" %>
  </p>
