--- a/app/views/zords/index.html.erb
+++ b/app/views/zords/index.html.erb
@@ -23,7 +23,12 @@
             <%= sort_link(@q, :capacity, "Capacity") %>
           </div>
         </div>
-
+        <div class="d-flex justify-content-start" style="margin-top: 20px;">
+          <div class="btn btn-primary">
+            <%= sort_link(@q, :avg_rating, "Customer Reviews") %>
+            <%= @avg_rating_value%>
+          </div>
+        </div>        
 
         <!--These are for Filtering -->
 
@@ -89,6 +94,12 @@
               <p class="card-text mb-1"><strong>Material:</strong><%= zord.material %></p>
               <p class="card-text mb-1"><strong>Theme:</strong><%= zord.theme %></p>
               <p class="card-text mb-1"><strong>Description:</strong><%= zord.description %></p>
+              <% @reviews = zord.reviews %>
+              <% total_rating = @reviews.sum(:rating) %>
+              <% @average_rating = total_rating.to_f / @reviews.length %>
+              <% zord.avg_rating = params[:average_rating].present? ? params[:average_rating] : @average_rating %>
+              <% zord.avg_rating = zord.avg_rating.to_f.nan? ? 0 : zord.avg_rating %>
+              <%= rating_stars(zord.avg_rating)%>
               <div class="mt-3 mb-3">
 
                 <%= link_to "View Details", zord_path(zord), class: "btn btn-primary me-2" %>
