--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,6 +15,12 @@
               <li class="list-group-item">
                 <%= order_item.quantity %> x <%= order_item.zord.name %> - <%= number_to_currency(order_item.zord.price) %>
               </li>
+              <% if order_item.zord.resales.exists?(status: ['pending', 'approved'], user_id: current_user.id) %>
+                <%= button_tag "Resell", class: "btn btn-primary", disabled: true, title: "Zord already listed for resale" %>
+              <% else %>
+                <%= link_to "Resell", new_resale_path(zord_id: order_item.zord.id), class: "btn btn-primary" %>
+              <% end %>
+
               <% total_price += order_item.quantity * order_item.zord.price %>
             <% end %>
           </ul>
@@ -29,7 +35,7 @@
         <div class="mt-3">
           <%= link_to "View Order Details", order_path(order), class: "btn btn-primary mr-2" %>
           <%= link_to "Order Again", orders_path(order: order), class: "btn btn-success" %>
-          <%= link_to "Sell", orders_path(order: order), class: "btn btn-danger" %>
+
         </div>
       </div>
     </div>
