--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -29,7 +29,11 @@
                     <p class="card-text mb-1"><strong>Theme: </strong><%= order_item.zord.theme %></p>
                   </div>
                 </div>
-
+                <% if order_item.zord.resales.exists?(status: ['pending', 'approved'], user_id: current_user.id) %>
+                  <%= button_tag "Resell", class: "btn btn-sm btn-primary", disabled: true, title: "Zord already listed for resale" %>
+                <% else %>
+                  <%= link_to "Resell", new_resale_path(zord_id: order_item.zord.id), class: "btn btn-sm btn-primary" %>
+                <% end %>
                 <div class="col-md-3 mb-1 mt-1">
                   <p class="card-text mb-1"><strong>Quantity: </strong><%= order_item.quantity %></p>
                 </div>
@@ -69,7 +73,7 @@
           <div class="mt-3">
             <%= link_to "Back", orders_path, class: "btn btn-primary mr-2" %>
             <%= link_to "Order Again", order_path(@order), class: "btn btn-success mr-2" %>
-            <%= link_to "Sell", order_path(@order), class: "btn btn-danger" %>
+        
           </div>
 
         </div>
