--- a/app/views/resales/vendor_index.html.erb
+++ b/app/views/resales/vendor_index.html.erb
@@ -1,11 +1,9 @@
-<!-- app/views/resales/index.html.erb -->
-
 <div class="container mt-5">
   <h1 class="mb-4">All Resale Requests</h1>
 
   <div class="row">
     <% @resales.each do |resale| %>
-      <div class="col-md-4 mb-4">
+      <div class="col-md-3 mb-3">
         <div class="card">
           <% if resale.zord.figure_image.attached? %>
             <%= image_tag resale.zord.figure_image, class: "card-img-top img-fluid zord-image", alt: "Zord Image" %>
@@ -17,15 +15,16 @@
             <p class="card-text">User: <%= resale.user.email %></p>
             <p class="card-text">New Price: <%= number_to_currency(resale.new_price) %></p>
             <p class="card-text">Condition: <%= resale.condition %></p>
-            <p class="card-text">Status: <%= resale.status %></p>
-            <% if resale.status != "approved" %>
-              <%= button_to "Remove", resale_path(resale), method: :delete, data: { confirm: "Are you sure you want to remove this resale request?" }, class: "btn btn-danger" %><br>
-            <% else %>
-              <%= button_to "Remove", resale_path(resale), method: :delete, class: "btn btn-danger", disabled: true, title: "Resale request has been approved and cannot be removed" %><br>
+            <%= form_with(model: resale, url: update_status_resale_path(resale), method: :patch) do |f| %>
+              <div class="form-group">
+                <%= f.select :status, options_for_select([["Pending", "pending"], ["Approved", "approved"], ["Rejected", "rejected"]], selected: resale.status), {}, class: "form-control" %>
+              </div>
+              <% if resale.status == "approved" %>
+                <%= f.submit "Update Status", class: "btn btn-primary", disabled: true %>
+              <% else %>
+                <%= f.submit "Update Status", class: "btn btn-primary" %>
+              <% end %>
             <% end %>
-            <div>
-              <%= link_to "View Details", resale_path(resale), class: "btn btn-primary" %>
-            </div>
           </div>
         </div>
       </div>
@@ -36,7 +35,7 @@
 <!-- Custom CSS -->
 <style>
   .zord-image {
-    width: 500px; /* Set the width as desired */
-    height: 500px; /* Set the height as desired */
+    width: 300px; /* Set the width as desired */
+    height: 300px; /* Set the height as desired */
   }
 </style>
