--- a/app/views/notifications/show_notification.html.erb
+++ b/app/views/notifications/show_notification.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 
-<%if @notification.status != "Paid"%>
+<%if @notification.status != "Paid" && @notification.status != "Rejected" %>
   <p>
       <%= button_to "Pay for Customized Item", add_to_cart_path(zord_id: @notification.zord.id, notification_id: @notification.id), method: :post, class: "btn btn-success" %>
   </p>
