--- a/app/views/zords/show.html.erb
+++ b/app/views/zords/show.html.erb
@@ -16,9 +16,8 @@
     <p><strong>Capacity:</strong> <%= @zord.capacity %></p>
     <p><strong>Material:</strong> <%= @zord.material %></p>
     <p><strong>Price:</strong> <%= number_to_currency(@zord.price) %></p>
-    <p><strong>Rating:</strong> <%= @zord.avg_rating.round(1) %></p>
     <% @zord.avg_rating = @zord.avg_rating.to_f.nan? ? 0 : @zord.avg_rating %>
-    <%= rating_stars(@zord.avg_rating)%>
+    <p><%= rating_stars(@zord.avg_rating)%></p>
     <% if current_user && current_user.vendor? %>
         <p><strong>Quantity:</strong> <%= @zord.quantity %></p>
     <% end %>
