--- a/app/views/zords/index.html.erb
+++ b/app/views/zords/index.html.erb
@@ -83,28 +83,31 @@
             <div class="card-body">
               <h5 class="card-title"><%= zord.name %></h5>
               <% if zord.limited? %>
-                <p class="card-text mb-1"><strong>Limited:</strong>Yes </p>
+                <p class="card-text mb-1"><strong>Limited Edition: </strong>Yes </p>
               <% end  %>
               <p class="card-text mb-1">Price: <%= number_to_currency(zord.price) %></p>
-              <p class="card-text mb-1"><strong>Material:</strong><%= zord.material %></p>
-              <p class="card-text mb-1"><strong>Theme:</strong><%= zord.theme %></p>
-              <p class="card-text mb-1"><strong>Description:</strong><%= zord.description %></p>
+              <p class="card-text mb-1"><strong>Material: </strong><%= zord.material %></p>
+              <p class="card-text mb-1"><strong>Theme: </strong><%= zord.theme %></p>
+              <p class="card-text mb-1"><strong>Capacity: </strong><%= zord.capacity %></p>
               <div class="mt-3 mb-3">
+                <div class="mt-3">
+                  <%= link_to "View Details", zord_path(zord), class: "btn btn-primary me-2" %>
 
-                <%= link_to "View Details", zord_path(zord), class: "btn btn-primary me-2" %>
+                  <% if current_user && !current_user.vendor? %>
+                    <div class="mt-3">
+                      <%= button_to "Add to Cart", add_to_cart_path(zord),method: :post, class: "btn btn-success" %>
+                    </div>
+                  <% end %>
+                  
 
-                <% if current_user && !current_user.vendor? %>
-                  <%= button_to "Add to Cart", add_to_cart_path(zord),method: :post, class: "btn btn-success" %>
-                <% end %>
-
-                <% if current_user && current_user.vendor? %>
-                  <%= link_to "Edit Zord", edit_zord_path(zord), class: "btn btn-primary" %>
-                
-                  <div class="mt-3">
-                    <%= button_to "Delete", zord_path(zord), method: :delete, data: { confirm: "Are you sure you want to delete this zord?" }, class: "btn btn-danger" %>
-                  </div>
-                <% end %>
-
+                  <% if current_user && current_user.vendor? %>
+                    <%= link_to "Edit Zord", edit_zord_path(zord), class: "btn btn-primary" %>
+                  
+                    <div class="mt-3">
+                      <%= button_to "Delete", zord_path(zord), method: :delete, data: { confirm: "Are you sure you want to delete this zord?" }, class: "btn btn-danger" %>
+                    </div>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
