--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All Orders</h1>
   <% if @orders.present? %>
     <% @orders.each do |order| %>
-      <div class="card mt-3">
+      <div class="card mt-4 mb-4">
         <div class="card-body">
           <p class="card-text">Order ID: <%= order.id %></p>
           <p class="card-text">Status: <span class="<%= order.status == 'Placed' ? 'text-success' : 'text-danger' %>"><%= order.status %></span></p>
@@ -37,7 +37,7 @@
         <!-- Buttons -->
         <div class="mt-3">
           <%= link_to "View Order Details", order_path(order), class: "btn btn-primary mr-2" %>
-          <%= link_to "Order Again", orders_path(order: order), class: "btn btn-success" %>
+          <%= link_to "Order Again", address_path(order_id: order.id), class: "btn btn-success" %>
         </div>
       </div>
     <% end %>
