--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,14 +15,14 @@
               <% order.order_items.each do |order_item| %>
                 <li class="list-group-item">
                   <%= order_item.quantity %> x <%= order_item.zord.name %> - <%= number_to_currency(order_item.zord.price) %>
-                  <%= link_to "Add a Review", review_new_path(order_item_id: order_item.id, zord_id: order_item.zord.id) , class: "btn btn-danger" %>
-                  <%= link_to "View Reviews", all_reviews_path(zord_id: order_item.zord.id), class: "btn btn-primary mr-2" %>
+                  <%= link_to "Add a Review", review_new_path(order_item_id: order_item.id, zord_id: order_item.zord.id) , class: "btn btn-primary" %>
+                  <%= link_to "View Reviews", all_reviews_path(zord_id: order_item.zord.id), class: "btn btn-primary" %>
+                  <% if order_item.zord.resales.exists?(status: ['Pending', 'Approved'], user_id: current_user.id) %>
+                    <%= button_tag "Resell", class: "btn btn-danger", disabled: true, title: "Zord already listed for resale" %>
+                  <% else %>
+                    <%= link_to "Resell", new_resale_path(zord_id: order_item.zord.id), class: "btn btn-danger" %>
+                  <% end %>
                 </li>
-                <% if order_item.zord.resales.exists?(status: ['pending', 'approved'], user_id: current_user.id) %>
-                  <%= button_tag "Resell", class: "btn btn-primary", disabled: true, title: "Zord already listed for resale" %>
-                <% else %>
-                  <%= link_to "Resell", new_resale_path(zord_id: order_item.zord.id), class: "btn btn-primary" %>
-                <% end %>
 
                 <% total_price += order_item.quantity * order_item.zord.price %>
               <% end %>
