--- a/app/views/resales/new.html.erb
+++ b/app/views/resales/new.html.erb
@@ -12,13 +12,13 @@
             <%= f.hidden_field :user_id, value: current_user.id %>
 
             <div class="form-group">
-              <%= f.label :new_price, class: "font-weight-bold" %>
-              <%= f.number_field :new_price, class: "form-control" %>
+              <%= f.label :new_price, class: "font-weight-bold"%>
+              <%= f.number_field :new_price, class: "form-control", required: true %>
             </div>
 
             <div class="form-group">
-              <%= f.label :condition, class: "font-weight-bold" %>
-              <%= f.text_field :condition, class: "form-control" %>
+              <%= f.label :condition, class: "font-weight-bold"%>
+              <%= f.text_field :condition, class: "form-control", required: true %>
             </div>
 
             <div class="text-center">
